2006-09-28	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo-helper/Makefile.am: Fix installation on Win32
	  variants. Bug #2463.

2006-09-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Fix double
	  click sometimes requiring a third click. Bug #2259.

2006-09-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_item_hit_test): Revert previous
	  change as it makes it too easy to accidently select files that you
	  do not wanted to selected, when in compact list mode.

2006-09-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_item_hit_test): Apply patch from
	  Matt McClinch <mattmcclinch@gmail.com> to improve rubberband
	  selection in compact list mode.

2006-09-10	Benedikt Meurer <benny@xfce.org>

	* docs/reference/exo-open.xml: Add the --working-directory parameter
	  to the exo-open manpage.

2006-09-10	Benedikt Meurer <benny@xfce.org>

	* exo-open/main.c: Use GOption to parse the command line parameters
	  and add a --working-directory parameter, which is used when launching
	  applications via --launch.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.
	* po/de.po: Update german translations.

2006-09-05	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.1.10rc1 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.

2006-09-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_drag_begin): Fix build with
	  compilers other than gcc. Bug #2252.
	* po/cs.po: Updated czech translations by Michal Várady 
	  <miko.vaji@gmail.com>.

2006-08-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-chooser-model.h: Need to include <exo/exo-config.h> to
	  make sure G_GNUC_WARN_UNUSED_RESULT is defined. Thanks to Enrico