@@ -355,6 +355,7 @@ exo-helper/helpers/Makefile
 exo-open/Makefile
 exo-support/Makefile
 icons/Makefile
+icons/24x24/Makefile
 icons/48x48/Makefile
 pixmaps/Makefile
 po/Makefile.in
