@@ -1,0 +1,10 @@
+# $Id$
+
+iconsdir = $(datadir)/icons/hicolor/24x24/apps
+icons_DATA =								\
+	preferences-desktop-default-applications.png
+
+EXTRA_DIST =								\
+	$(icons_DATA)
+
+# vi:set ts=8 sw=8 noet ai nocindent:
