@@ -1,6 +1,7 @@
 # $Id$
 
 SUBDIRS =								\
+	24x24								\
 	48x48
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
