@@ -1,5 +1,10 @@
 2006-09-28	Benedikt Meurer <benny@xfce.org>
 
+	* icons/24x24/, configure.in.in, icons/Makefile.am: Install the
+	  preferences-desktop-default-applications.png in 24x24 as well.
+
+2006-09-28	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in, exo-helper/Makefile.am: Fix installation on Win32
 	  variants. Bug #2463.
 
